--- a/resources/ios/MainWindow.xib
+++ b/resources/ios/MainWindow.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
     <dependencies>
-        <deployment version="768" identifier="iOS"/>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
@@ -19,12 +19,14 @@
         </customObject>
         <viewController nibName="HeySubstrateViewController" id="10" customClass="HeySubstrateViewController">
             <extendedEdge key="edgesForExtendedLayout"/>
+            <point key="canvasLocation" x="363" y="516"/>
         </viewController>
         <window clearsContextBeforeDrawing="NO" contentMode="scaleToFill" resizesToFullScreen="NO" id="12">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="276" height="390"/>
+            <autoresizingMask key="autoresizingMask"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="676" y="333"/>
         </window>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
